manifests/gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
spec:
  selector:
    app: gogs
  ports:
    - port: 3000
      targetPort: 3000
